--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
+    "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
     "react": "19.1.0",
