--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.18",
+    "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.8",
     "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
