--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@shopify/flash-list": "^2.1.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.18",
     "expo-auth-session": "~7.0.8",
@@ -26,6 +27,7 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
