--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@shopify/flash-list": "^2.1.0",
     "dotenv": "^17.2.3",
     "expo": "~54.0.18",
